src/styles/_navbar.scss
.navbar {
  min-height: $navbar-min-height;
  .btn {
    white-space: nowrap;
  }
  .navbar-logo {
    width: 110px;
    @include media-breakpoint-up(md) {
      width: 120px;
    }
    @include media-breakpoint-up(lg) {
      width: 130px;
    }
  }
}

@media screen and ( max-height: 699px ) {
  .sticky-top {
    position: unset !important;
  }
}

// Desktop properties

.desktop-navbar {
  display: none;
  @include media-breakpoint-up(lg) {
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }
}

.hover-list-parent > li > a,
.hover-list-parent > li > p {
  color: $white;
  display: inline-block;
  border-radius: 5px;
  margin: 10px;
  padding: 10px 15px;
  @include media-breakpoint-up(xl) {
    padding: 10px 20px;
  }
}
.hover-list-parent p {
  cursor: default;
}

.hover-list-parent > li {
  position: relative;
  display: flex;
  justify-content: center;
}

.hover-list-child {
  z-index: $zindex-popup;
  opacity: 0;
  position: absolute;
  overflow: hidden;
  padding: 20px;
  top: 60px;
  border-radius: 2px;
  transition: opacity 700ms;
  will-change: opacity scale;
  display: none;
  min-width: 200px;
  transition: 400ms;
}

.trigger-enter .hover-list-child {
  display: block;
}

.trigger-enter-active .hover-list-child {
  opacity: 1;
  transition: 400ms;
}

.list-item-hover {
  display: none;
  position: relative;
  padding: 2px 8px;
  border-radius: $border-radius;
}

.list-item-hover.hide {
  opacity: 0 !important;
  pointer-events: none;

}
.list-item-hover.show {
  opacity: 1 !important;
  pointer-events: all;
}

.trigger-enter .list-item-hover {
  display: block;
  opacity: 0;
  transition: 200ms;
  transform: translateX(2%);
}

.trigger-enter-active .list-item-hover {
  opacity: 1;
  transition: 400ms;
  transform: translateX(0);
  &:hover {
    background-color: $pale-energetic-blue;
    transition: 400ms;
    .list-item-hover-text {
      color: $deep-blue;
    }
  }
}

.list-item-hover-text {
  line-height: 18px;
  font-size: 14px;
  color: $gray-600;
  transition: 400ms;
}

.dropdown-background {
  z-index: $zindex-popup;
  width: 100px;
  height: 100px;
  border-radius: 0.25rem;
  box-shadow: 0 0 5px 1px $gray-700;
  transform-origin: 50% 0;
  transform: translateY($navbar-min-height);
}

.dropdown-background-transition-enter {
  opacity: 0;
}
.dropdown-background-transition-enter-active {
  opacity: 1;
  transition: 500ms;
}
.dropdown-background-transition-exit {
  opacity: 1;
}
.dropdown-background-transition-exit-active {
  opacity: 0;
  transition: 500ms;
}

.arrow {
  position: absolute;
  width: 14px;
  height: 14px;
  display: block;
  background: $white;
  transform: translateY(-50%) rotate(45deg);
  box-shadow: -2px -2px 4px -2px $gray-700;
  border-radius: 0.25rem 0 0 0;
}

.hover-list-child.features-dd {
  width: 450px;
}


.hover-list-child.resources-dd {
  width: 400px;
}

.hover-list-child.pricing-dd {
  width: 350px;
}

// Mobile properties

.mobile-navbar {
  display: block;
  @include media-breakpoint-up(lg) {
    display: none;
  }
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(255, 255, 255, 0.95);
  z-index: $zindex-popup;
  overflow: auto;
}

.mobile-navbar-transition-enter {
  opacity: 0;
  transform: translateX(-100%);
}
.mobile-navbar-transition-enter-active {
  opacity: 1;
  transform: translateX(0);
  transition: 750ms;
}
.mobile-navbar-transition-exit {
  opacity: 1;
  transform: translateX(0);
}
.mobile-navbar-transition-exit-active {
  opacity: 0;
  transform: translateX(-100%);
  transition: 750ms;
}

#mobile-navbar-toggler {
  display: block;
  @include media-breakpoint-up(lg) {
    display: none;
  }
  position: relative;
  width: 20px;
  height: 20px;
  padding: 20px;
  margin: -10px -12px -12px 12px;
  transform: rotate(0deg);
  transition: 0.5s ease-in-out;
  border: none;
  background: none;
  cursor: pointer;
  z-index: $zindex-popup-toggler;
}

#mobile-navbar-toggler span {
  display: block;
  position: absolute;
  height: 2px;
  width: 50%;
  background: $gray-500;
  border-radius: 9px;
  opacity: 1;
  left: 10px;
  transform: rotate(0deg);
  transition: 0.25s ease-in-out;
}

#mobile-navbar-toggler span:nth-child(1) {
  top: 13px;
}
#mobile-navbar-toggler span:nth-child(2),
#mobile-navbar-toggler span:nth-child(3) {
  top: 19px;
}
#mobile-navbar-toggler span:nth-child(4) {
  top: 25px;
}

#mobile-navbar-toggler.open span:nth-child(1),
#mobile-navbar-toggler.open span:nth-child(4) {
  top: 19px;
  width: 0%;
  left: 50%;
}
#mobile-navbar-toggler.open span:nth-child(2) {
  transform: rotate(45deg);
}
#mobile-navbar-toggler.open span:nth-child(3) {
  transform: rotate(-45deg);
}

